--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My CV</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="img/profile.png" alt="MyProfile" height=150px/></td>
+            <td><img src="profile.png" alt="MyProfile" height=150px/></td>
             <td><h1> Apurva Thool</h1>
                 <h4><em> Electronics and Communication <strong>Engineer</strong> </em></h4>
                 <h4>Rashtrasant Tukdoji Maharaj University, Nagpur.</h4>
